--- a/column_frame.html
+++ b/column_frame.html
@@ -10,6 +10,6 @@
         <a href="experiment_css_2.html" target="body_frame">experiment_css_2.html</a><br>
         <a href="loader1.html" target="body_frame">loader1.html</a><br>
         <a href="php/create_file.php" target="body_frame">php/create_file.php</a><br>
-		<a href="php/A.php" target="body_frame">php/create_file.php</a><br>
+		<a href="php/A.php" target="body_frame">php/A.php</a><br>
     </body>
 </html>
