--- a/sub_site_one/index.html
+++ b/sub_site_one/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/635f08a5fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -27,6 +28,20 @@
             </label>
         </nav>
     </header>
+
+    <main>
+        <section class="intro wrapper">
+            <div class="intro-img">
+                <p class="intro-text">Find Your New<br>
+                Modern Apartment</p>
+            </div>
+
+            <div class="intro-contacts">
+                <p><i class="fa-solid fa-phone"></i>(000)1234-567</p>
+                <p><i class="fa-solid fa-location-dot"></i>Melborn, Australia</p>
+            </div>
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
